--- a/frontend/src/Styles/formStyles.css
+++ b/frontend/src/Styles/formStyles.css
@@ -151,10 +151,9 @@
   font-style: lighter;
   font-weight: 400;
   color: #313131;
-  margin-top: 1.25%;
-  /* padding-top: 2%; */
+  /* margin-top: 1.25%;
   padding-bottom: 1%;
-  padding-right: 2%;
+  padding-right: 2%; */
 }
 .form-radio-button:hover {
   cursor: pointer;
@@ -242,7 +241,7 @@
   margin-top: -0.5rem;
 }
 
-.checkbox-group-container section {
+.field-group-container section {
   border: 1px solid #d3d3cd;
   border-radius: 5px;
   margin-top: 0.4rem;
@@ -263,24 +262,28 @@
   /* color: #2d8cf0; */
 }
 
-.checkbox-group-container:focus-within section {
+.field-group-container:focus-within section {
   border: 1px solid #2d8cf0;
 }
-.checkbox-group-container:focus-within h3 {
-  color:  #2d8cf0;
+.field-group-container:focus-within h3 {
+  color: #2d8cf0;
 }
-
- 
 
 .checkbox-group span {
   padding-left: 0.4rem;
   padding-bottom: 13px;
 }
 
-
-
 .checkbox-group {
   /* padding-top: 0.5rem; */
   margin-top: 4px;
   gap: 10px;
+}
+
+.space-for-remove {
+  width: 55px;
+}
+.space-for-remove2 {
+  background-color: red;
+  width: 155px;
 }
