Modified educational divisions with subdivisions before passing division index as props

--- a/frontend/src/Styles/utilities.css
+++ b/frontend/src/Styles/utilities.css
@@ -51,6 +51,11 @@
   flex-direction: column;
 }
 
+.flex-2 {
+  display: flex;
+  
+}
+
 .flex-start {
   display: flex;
   align-items: flex-start;
