--- a/frontend/src/Styles/utilities.css
+++ b/frontend/src/Styles/utilities.css
@@ -53,7 +53,6 @@
 
 .flex-2 {
   display: flex;
-  
 }
 
 .flex-start {
@@ -100,8 +99,14 @@
   padding-top: 2%;
 }
 
+.pt4 {
+  padding-top: 4%;
+}
 .pt5 {
   padding-top: 5%;
+}
+.pt6 {
+  padding-top: 6%;
 }
 .pr5 {
   padding-right: 5%;
@@ -135,8 +140,19 @@
   margin-top: 40px;
 }
 
+.mb2 {
+  margin-bottom: -2rem;
+}
+
 .m20 {
   margin-top: 1rem;
+}
+
+.mlp5 {
+  margin-left: 0.3rem;
+}
+.mtminus1 {
+  margin-top: -1rem;
 }
 
 .mtminus2 {
