--- a/frontend/src/Styles/formStyles.css
+++ b/frontend/src/Styles/formStyles.css
@@ -5,6 +5,14 @@
   min-height: 100vh;
 }
 
+.main-container {
+  max-width: 82%;
+  /* display: flex;
+  align-items: center;
+  justify-content: center; */
+  background-color: lavenderblush;
+  /* background-color:#767676; */
+}
 .inactive-bg {
   /* background-color: rgb(229, 229, 229); */
   background-color: lime;
