--- a/frontend/src/Styles/utilities.css
+++ b/frontend/src/Styles/utilities.css
@@ -189,10 +189,32 @@
   margin-bottom: -2rem;
 }
 
+.mb5px {
+  margin-bottom: 5px;
+}
+
 .m20 {
   margin-top: 1rem;
 }
 
+.mlnp9{
+  margin-left: -.9rem;
+}
+.mlnp8{
+  margin-left: -.8rem;
+}
+.mlnp7{
+  margin-left: -.7rem;
+}
+.mln5{
+  margin-left: -.5rem;
+}
+.mln4{
+  margin-left: -.5rem;
+}
+.mln5{
+  margin-left: -.8rem;
+}
 .mlp5 {
   margin-left: 0.3rem;
 }
@@ -267,6 +289,9 @@
 .gapp5 {
   gap: 0.5rem;
 }
+.gapp6 {
+  gap: 0.6rem;
+}
 .gap1 {
   gap: 1rem;
 }
@@ -307,4 +332,8 @@
 
 .block {
   display: inline-block;
+}
+
+.cursor-auto:hover {
+  cursor: auto;
 }
