--- a/frontend/src/Styles/formStyles.css
+++ b/frontend/src/Styles/formStyles.css
@@ -254,8 +254,7 @@
   cursor: pointer;
 }
 
-.field-group-container section,
-.field-subgroup-container section {
+.field-group-container section, .field-subgroup-container section {
   border: 1px solid #d3d3cd;
   border-radius: 5px;
   margin-top: 0.4rem;
@@ -273,19 +272,24 @@
 
 .checkbox-inputs:focus-within label {
   transition: all 0.3s ease;
+  /* color: #2d8cf0; */
 }
 
-.field-group-container:focus-within > section,
-.field-group-container:hover > section {
+
+
+.field-group-container:focus-within> section,
+.field-group-container:hover> section {
   border: 1px solid #2d8cf0;
 }
-.field-group-container:focus-within h3 {
+.field-group-container:focus-within> h3 {
   color: #2d8cf0;
 }
 
-.field-subgroup-container:focus-within section,
+
+.field-subgroup-container:focus-within
+section,
 .field-subgroup-container:hover section {
-  border: 1px solid #2d8cf0;
+border: 1px solid #2d8cf0;
 }
 
 .checkbox-group span {
