Payment discounts dynamically mapped before amount recieving and percentage or amount radio choices fixed

--- a/frontend/src/Styles/utilities.css
+++ b/frontend/src/Styles/utilities.css
@@ -519,3 +519,16 @@
 .pb-p5 {
   padding-bottom: 0.5rem;
 }
+
+
+/* TOP PADDINGS */
+.pt-1 {
+  padding-top: 1rem;
+}
+
+
+/* CONTENT RELATED */
+.fit-content {
+  
+  min-width: fit-content;
+}
