Payment discount mapping done before value handling

--- a/frontend/src/Styles/formStyles.css
+++ b/frontend/src/Styles/formStyles.css
@@ -135,9 +135,18 @@
   width: 14rem;
 }
 .input--small input,
-.input--small select {
+.input--small select,
+.small-empty {
   width: 10.4rem;
 }
+.small-empty {
+  height: 5rem;
+}
+.small-empty input {
+  /* background-color: red; */
+  border: 0px solid black;
+}
+
 .input--xsmall input,
 .input--xsmall select {
   width: 5.5rem;
@@ -214,6 +223,11 @@
   border-color: #2d8cf0;
 }
 
+/* #inputs:focus-within input {
+  transition: all 0.3s ease;
+  border-color: #2d8cf0;
+} */
+
 .incomplete--inputs input {
   padding: 0 5px;
   margin-top: 4px;
@@ -265,6 +279,13 @@
   /* padding-bottom: 0.6rem; */
   width: fit-content;
 }
+tbody tr {
+  margin-bottom: 10rem;
+}
+
+tbody tr {
+  border-top: 1.5px solid #d3d3cd;
+}
 
 .checkbox-group label:hover,
 .checkbox-group input:hover {
@@ -300,7 +321,7 @@
 }
 
 .space-for-remove {
-  background-color: lime;
+  /* background-color: lime; */
   width: 55px;
 }
 
