--- a/frontend/src/Styles/utilities.css
+++ b/frontend/src/Styles/utilities.css
@@ -450,6 +450,15 @@
 .mt-1 {
   margin-top: 1rem;
 }
+.mb-3 {
+  margin-bottom: 3rem;
+}
+.mb-2 {
+  margin-bottom: 2rem;
+}
+.mb-1p5 {
+  margin-bottom: 1.5rem;
+}
 .mb-1 {
   margin-bottom: 1rem;
 }
