--- a/frontend/src/Styles/utilities.css
+++ b/frontend/src/Styles/utilities.css
@@ -494,6 +494,9 @@
   margin-left: -4rem;
 }
 
+.-mt-p5 {
+  margin-top: -0.5rem;
+}
 .-mt-1p5 {
   margin-top: -1.5rem;
 }
@@ -542,9 +545,34 @@
 .pt-1 {
   padding-top: 1rem;
 }
+.pt-2 {
+  padding-top: 2rem;
+}
+.pt-3 {
+  padding-top: 3rem;
+}
+.pt-4 {
+  padding-top: 4rem;
+}
+.pt-5 {
+  padding-top: 5rem;
+}
+
+.pt-50 {
+  padding-top: 50%;
+}
 
 .mt-1 {
   margin-top: 1rem;
+}
+.mt-2 {
+  margin-top: 2rem;
+}
+.mt-3 {
+  margin-top: 3rem;
+}
+.mt-4 {
+  margin-top: 4rem;
 }
 
 /* CONTENT RELATED */
