--- a/frontend/src/Styles/utilities.css
+++ b/frontend/src/Styles/utilities.css
@@ -450,6 +450,15 @@
 .mt-1 {
   margin-top: 1rem;
 }
+.mt-p2 {
+  margin-top: .2rem;
+}
+.mt-p3 {
+  margin-top: .3rem;
+}
+.mt-p5 {
+  margin-top: .5rem;
+}
 .mb-3 {
   margin-bottom: 3rem;
 }
