Advanced Payment base upto courese type selection completed: course adding initiallized

--- a/frontend/src/Styles/utilities.css
+++ b/frontend/src/Styles/utilities.css
@@ -638,3 +638,10 @@
 .z-100 {
   z-index: 1000000;
 }
+
+/* PREVENT TEXT SELECTION  */
+* {
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
+}
