Advanced Payment base course based completed before accepting courses based on departments

--- a/frontend/src/Styles/dynamicButtonsStyle.css
+++ b/frontend/src/Styles/dynamicButtonsStyle.css
@@ -38,6 +38,20 @@
   margin-left: 35px; */
 }
 
+.show-icon {
+  content: url("../Assets/Images/show.svg");
+  cursor: pointer;
+  height: 15px;
+  margin-left: -14px;
+   width: 17px;
+}
+.hide-icon {
+  content: url("../Assets/Images/hide.svg");
+  cursor: pointer;
+  height: 15px;
+  margin-left: -14px;
+}
+
 .social__link {
   padding: 5px 5px;
 }
