--- a/frontend/src/Styles/utilities.css
+++ b/frontend/src/Styles/utilities.css
@@ -525,6 +525,9 @@
 .mb-p5 {
   margin-bottom: 0.5rem;
 }
+.mr-1 {
+  margin-right: 1rem;
+}
 /* NEGATIVE MARGINS */
 .-ml-p7 {
   margin-left: -0.7rem;
@@ -534,6 +537,15 @@
 }
 .-ml-p5 {
   margin-left: -0.5rem;
+}
+.-ml-p4 {
+  margin-left: -0.4rem;
+}
+.-ml-p3 {
+  margin-left: -0.3rem;
+}
+.-ml-p2 {
+  margin-left: -0.2rem;
 }
 .-ml-1 {
   margin-left: -1rem;
@@ -682,12 +694,10 @@
   user-select: none; /* Standard syntax */
 }
 
-
-
 /* WIDTH UTILITIES */
 .w-1 {
   width: 1rem;
-  width: 25vw;
+  width: 30vw;
 }
 .w-10p {
 }
